// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataAccessReportsForm /> renders create form 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    data-automation="nameInput"
    disabled={false}
    id="frm-data-access-reports-name"
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    data-automation="descriptionInput"
    disabled={false}
    id="frm-data-access-reports-description"
    inputType="text"
    label="Description"
    name="description"
  />
  <DetailHeader
    text="Report"
  />
  <RadioGroupField
    data-automation="reportTypeRadio"
    disabled={false}
    id="frm-data-access-reports-report-type"
    label="Type *"
    name="reportType"
    options={
      Array [
        Object {
          "label": "Realtime",
          "value": "realtime",
        },
        Object {
          "label": "Historical",
          "value": "historical",
        },
      ]
    }
    required={true}
  />
  <React.Fragment>
    <RadioGroupField
      data-automation="realtimeReportTypeRadio"
      disabled={false}
      id="frm-data-access-reports-realtime-report-type"
      label="Realtime Report Type *"
      name="realtimeReportType"
      options={
        Array [
          Object {
            "label": "Standard",
            "value": "standard",
          },
          Object {
            "label": "Custom",
            "value": "custom",
          },
        ]
      }
      required={true}
    />
    <AutoCompleteField
      data-automation="realtimeReportAutoComplete"
      disabled={false}
      id="frm-data-access-reports-realtime-report-name"
      label="Realtime Report *"
      name="realtimeReportName"
      placeholder="Search..."
      suggestions={Array []}
    />
  </React.Fragment>
</form>
`;

exports[`<DataAccessReportsForm /> renders create form with historical type 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    data-automation="nameInput"
    disabled={false}
    id="frm-data-access-reports-name"
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    data-automation="descriptionInput"
    disabled={false}
    id="frm-data-access-reports-description"
    inputType="text"
    label="Description"
    name="description"
  />
  <DetailHeader
    text="Report"
  />
  <RadioGroupField
    data-automation="reportTypeRadio"
    disabled={false}
    id="frm-data-access-reports-report-type"
    label="Type *"
    name="reportType"
    options={
      Array [
        Object {
          "label": "Realtime",
          "value": "realtime",
        },
        Object {
          "label": "Historical",
          "value": "historical",
        },
      ]
    }
    required={true}
  />
  <AutoCompleteField
    data-automation="historicalReportAutoComplete"
    disabled={false}
    id="frm-data-access-reports-historical-catalog-name"
    label="Historical Reports Folder *"
    name="historicalCatalogName"
    placeholder="Search..."
    suggestions={Array []}
  />
</form>
`;

exports[`<DataAccessReportsForm /> renders update form 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    data-automation="nameInput"
    disabled={false}
    id="frm-data-access-reports-name"
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    data-automation="descriptionInput"
    disabled={false}
    id="frm-data-access-reports-description"
    inputType="text"
    label="Description"
    name="description"
  />
  <DetailHeader
    text="Report"
  />
  <RadioGroupField
    data-automation="reportTypeRadio"
    disabled={false}
    id="frm-data-access-reports-report-type"
    label="Type *"
    name="reportType"
    options={
      Array [
        Object {
          "label": "Realtime",
          "value": "realtime",
        },
        Object {
          "label": "Historical",
          "value": "historical",
        },
      ]
    }
    required={true}
  />
  <React.Fragment>
    <RadioGroupField
      data-automation="realtimeReportTypeRadio"
      disabled={false}
      id="frm-data-access-reports-realtime-report-type"
      label="Realtime Report Type *"
      name="realtimeReportType"
      options={
        Array [
          Object {
            "label": "Standard",
            "value": "standard",
          },
          Object {
            "label": "Custom",
            "value": "custom",
          },
        ]
      }
      required={true}
    />
    <AutoCompleteField
      data-automation="realtimeReportAutoComplete"
      disabled={false}
      id="frm-data-access-reports-realtime-report-name"
      label="Realtime Report *"
      name="realtimeReportName"
      placeholder="Search..."
      suggestions={Array []}
    />
  </React.Fragment>
</form>
`;

exports[`<DataAccessReportsForm /> renders update form with custom realtime type 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    data-automation="nameInput"
    disabled={false}
    id="frm-data-access-reports-name"
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    data-automation="descriptionInput"
    disabled={false}
    id="frm-data-access-reports-description"
    inputType="text"
    label="Description"
    name="description"
  />
  <DetailHeader
    text="Report"
  />
  <RadioGroupField
    data-automation="reportTypeRadio"
    disabled={false}
    id="frm-data-access-reports-report-type"
    label="Type *"
    name="reportType"
    options={
      Array [
        Object {
          "label": "Realtime",
          "value": "realtime",
        },
        Object {
          "label": "Historical",
          "value": "historical",
        },
      ]
    }
    required={true}
  />
  <React.Fragment>
    <RadioGroupField
      data-automation="realtimeReportTypeRadio"
      disabled={false}
      id="frm-data-access-reports-realtime-report-type"
      label="Realtime Report Type *"
      name="realtimeReportType"
      options={
        Array [
          Object {
            "label": "Standard",
            "value": "standard",
          },
          Object {
            "label": "Custom",
            "value": "custom",
          },
        ]
      }
      required={true}
    />
    <AutoCompleteField
      data-automation="realtimeReportAutoComplete"
      disabled={false}
      id="frm-data-access-reports-realtime-report-name"
      label="Realtime Report *"
      name="realtimeReportName"
      placeholder="Search..."
      suggestions={Array []}
    />
  </React.Fragment>
</form>
`;

exports[`<DataAccessReportsForm /> renders update form with historical type 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    data-automation="nameInput"
    disabled={false}
    id="frm-data-access-reports-name"
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    data-automation="descriptionInput"
    disabled={false}
    id="frm-data-access-reports-description"
    inputType="text"
    label="Description"
    name="description"
  />
  <DetailHeader
    text="Report"
  />
  <RadioGroupField
    data-automation="reportTypeRadio"
    disabled={false}
    id="frm-data-access-reports-report-type"
    label="Type *"
    name="reportType"
    options={
      Array [
        Object {
          "label": "Realtime",
          "value": "realtime",
        },
        Object {
          "label": "Historical",
          "value": "historical",
        },
      ]
    }
    required={true}
  />
  <AutoCompleteField
    data-automation="historicalReportAutoComplete"
    disabled={false}
    id="frm-data-access-reports-historical-catalog-name"
    label="Historical Reports Folder *"
    name="historicalCatalogName"
    placeholder="Search..."
    suggestions={Array []}
  />
</form>
`;

exports[`<DataAccessReportsForm /> renders update form without update permision 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    data-automation="nameInput"
    disabled={true}
    id="frm-data-access-reports-name"
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    data-automation="descriptionInput"
    disabled={true}
    id="frm-data-access-reports-description"
    inputType="text"
    label="Description"
    name="description"
  />
  <DetailHeader
    text="Report"
  />
  <RadioGroupField
    data-automation="reportTypeRadio"
    disabled={true}
    id="frm-data-access-reports-report-type"
    label="Type *"
    name="reportType"
    options={
      Array [
        Object {
          "label": "Realtime",
          "value": "realtime",
        },
        Object {
          "label": "Historical",
          "value": "historical",
        },
      ]
    }
    required={true}
  />
  <AutoCompleteField
    data-automation="historicalReportAutoComplete"
    disabled={true}
    id="frm-data-access-reports-historical-catalog-name"
    label="Historical Reports Folder *"
    name="historicalCatalogName"
    placeholder="Search..."
    suggestions={Array []}
  />
</form>
`;
